Dynamically added JQM elements

--- a/BlankCordovaApp1/BlankCordovaApp1/www/css/index.css
+++ b/BlankCordovaApp1/BlankCordovaApp1/www/css/index.css
@@ -1,9 +1,14 @@
+body {
+    font-family: 'Nunito', sans-serif;
+}
+
+
 #quiz-page-one {
     text-align: center;
     background-color: #3299BB;
     color: white;
     
-    font-family: 'Nunito', sans-serif;
+    
 }
 
 #myHeading {
