--- a/BlankCordovaApp1/BlankCordovaApp1/www/css/index.css
+++ b/BlankCordovaApp1/BlankCordovaApp1/www/css/index.css
@@ -18,55 +18,30 @@ body {
     
 }
 
-.bs-checkbox {
-    cursor: pointer;
-}
-
-.form-group label .bs-checkbox {
-    margin-left: -20px;
-}
-
-.bs-checkbox input {
-    display: none;
-}
-
-.bs-checkbox .fa {
-    display: inline-block;
-    min-width: 14px;
-}
-/* Fix for different width in font-awesome icons */
-
-
-#quiz-page-one {
-    text-align: center;
-    background-color: #BD1550;
-    color: white;
-    font-family: replayRounded;
-    height: 100%;
-}
-
-#front-img {
-    padding-bottom: 15px;
-    width: 100%;
-    height: auto;
-}
-
 #front-page {
     text-align: center;
     background-color: #BD1550;
     color: white;
-    font-family: replayRounded;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    /*font-family: replayRounded;*/
+    height: 100%;
 }
 
-
-
-#head3
-{
-    font-family: replayRounded;
+#MoodSurveyPage {
+    text-align: center;
+    background-color: #BD1550;
+    color: white;
+    /*font-family: replayRounded;*/
+    height: 100%;
 }
+
+#ExamGradePage {
+    text-align: center;
+    background-color: #BD1550;
+    color: white;
+    /*font-family: replayRounded;*/
+    height: 100%;
+}
+
 
 .questHeading {
     border-radius: 5px;
@@ -79,144 +54,24 @@ body {
     text-shadow: none;
 }
 
-
-#text-below
-{
-    
-}
-.lbl:first-child 
-{
-    float: left;
+input.ui-slider-input {
+    display: none !important;
 }
 
-.lbl 
-{
-    display: inline-block !important;
+.ui-slider-track {
+    margin: 0 15px 0 15px !important;
+    background-color: #BD1550 !important;
+}
+
+#sliderLbl {
+    display: inline-block;
     text-align: center;
 }
 
-
-
-.lbl:last-child
-{
-    float: right;
-}
-
-input[type=text] {
-
-    color: white;
-
-}
-
-
-
-   
-    
-    
-input[type=range] {
-        -webkit-appearance: none;
-        margin: 18px 0;
-        width: 100%;
+    #sliderLbl:first-child {
+        text-align: left;
     }
 
-    input[type=range]:focus {
-        outline: none;
+    #sliderLbl:last-child {
+        text-align: right;
     }
-
-    input[type=range]::-webkit-slider-runnable-track {
-        width: 100%;
-        height: 8.4px;
-        cursor: pointer;
-        animate: 0.2s;
-        background: #ddd;
-        border-radius: 3px;
-        border: none;
-        
-    }
-
-    input[type=range]::-webkit-slider-thumb {
-        border: none;
-        height: 20px;
-        width: 20px;
-        border-radius: 50%;
-        background: #BD1550;
-        cursor: pointer;
-        -webkit-appearance: none;
-        margin-top: -7px;
-    }
-
-    
-
-    input[type=range]:focus::-webkit-slider-runnable-track {
-        background: #ccc;
-    }
-
-    input[type=range]::-moz-range-track {
-        width: 100%;
-        height: 8.4px;
-        cursor: pointer;
-        animate: 0.2s;
-        box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-        background: #3071a9;
-        border-radius: 1.3px;
-        border: 0.2px solid #010101;
-    }
-
-    input[type=range]::-moz-range-thumb {
-        box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-        border: 1px solid #000000;
-        height: 36px;
-        width: 16px;
-        border-radius: 3px;
-        background: #ffffff;
-        cursor: pointer;
-    }
-
-    input[type=range]::-ms-track {
-        width: 100%;
-        height: 8.4px;
-        cursor: pointer;
-        animate: 0.2s;
-        background: transparent;
-        border-color: transparent;
-        border-width: 16px 0;
-        color: transparent;
-    }
-
-    input[type=range]::-ms-fill-lower {
-        background: #000000;
-        border-radius: 10px;
-        
-    }
-
-    input[type=range]::-ms-fill-upper {
-        background: #ddd;
-        border-radius: 10px;
-
-    }
-
-    input[type=range]::-ms-thumb {
-        box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-        border: 1px solid #000000;
-        height: 36px;
-        width: 16px;
-        border-radius: 3px;
-        background: #ffffff;
-        cursor: pointer;
-    }
-
-    input[type=range]:focus::-ms-fill-lower {
-        background: #000000;
-    }
-
-    input[type=range]:focus::-ms-fill-upper {
-        background: #ddd;
-    }
-
-input .ui-slider-input {
-    display: none;
-}
-
-.full-width-slider .ui-slider-track {
-    margin-left: 15px;
-}
