--- a/BlankCordovaApp1/BlankCordovaApp1/www/css/index.css
+++ b/BlankCordovaApp1/BlankCordovaApp1/www/css/index.css
@@ -18,11 +18,20 @@ body {
     
 }
 
+#main 
+{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
 #front-page {
     text-align: center;
     background-color: #BD1550;
     color: white;
-    /*font-family: replayRounded;*/
+    font-family: replayRounded;
     height: 100%;
 }
 
@@ -30,7 +39,7 @@ body {
     text-align: center;
     background-color: #BD1550;
     color: white;
-    /*font-family: replayRounded;*/
+    font-family: replayRounded;
     height: 100%;
 }
 
@@ -38,7 +47,7 @@ body {
     text-align: center;
     background-color: #BD1550;
     color: white;
-    /*font-family: replayRounded;*/
+    font-family: replayRounded;
     height: 100%;
 }
 
