--- a/BlankCordovaApp1/BlankCordovaApp1/www/css/index.css
+++ b/BlankCordovaApp1/BlankCordovaApp1/www/css/index.css
@@ -18,6 +18,8 @@ body {
     
 }
 
+
+
 #frontPage {
     position: fixed;
     top: 50%;
@@ -51,8 +53,12 @@ body {
     height: 100%;
 }
 
+.noUi-target {
+    background: #BD1550 !important;
+}
 
-.questHeading {
+.questHeading 
+{
     border-radius: 5px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     background: #444444;
@@ -74,6 +80,12 @@ input.ui-slider-input {
     background-color: #BD1550 !important;
 }
 
+.ui-slider-handle 
+{
+    width: 45px !important;
+    
+}
+
 #sliderLbl {
     display: inline-block;
     text-align: center;
@@ -85,4 +97,106 @@ input.ui-slider-input {
 
     #sliderLbl:last-child {
         text-align: right;
+    }
+
+input[type=range] {
+    height: 34px;
+    -webkit-appearance: none;
+    margin: 10px 0;
+    width: 100%;
+}
+
+    input[type=range]:focus {
+        outline: none;
+    }
+
+    input[type=range]::-webkit-slider-runnable-track {
+        width: 100%;
+        height: 11px;
+        cursor: pointer;
+        animate: 0.2s;
+        box-shadow: 1px 1px 1px #000000;
+        background: #74A9D8;
+        border-radius: 1px;
+        border: 0px solid #010101;
+    }
+
+    input[type=range]::-webkit-slider-thumb {
+        box-shadow: 1px 1px 1px #000031;
+        border: 1px solid #00001E;
+        height: 26px;
+        width: 26px;
+        border-radius: 15px;
+        background: #FFFFFF;
+        cursor: pointer;
+        -webkit-appearance: none;
+        margin-top: -8px;
+    }
+
+    input[type=range]:focus::-webkit-slider-runnable-track {
+        background: #74A9D8;
+    }
+
+    input[type=range]::-moz-range-track {
+        width: 100%;
+        height: 11px;
+        cursor: pointer;
+        animate: 0.2s;
+        box-shadow: 1px 1px 1px #000000;
+        background: #74A9D8;
+        border-radius: 1px;
+        border: 0px solid #010101;
+    }
+
+    input[type=range]::-moz-range-thumb {
+        box-shadow: 1px 1px 1px #000031;
+        border: 1px solid #00001E;
+        height: 26px;
+        width: 26px;
+        border-radius: 15px;
+        background: #FFFFFF;
+        cursor: pointer;
+    }
+
+    input[type=range]::-ms-track {
+        width: 100%;
+        height: 11px;
+        cursor: pointer;
+        animate: 0.2s;
+        background: transparent;
+        border-color: transparent;
+        color: transparent;
+    }
+
+    input[type=range]::-ms-fill-lower {
+        background: #74A9D8;
+        border: 0px solid #010101;
+        border-radius: 2px;
+        box-shadow: 1px 1px 1px #000000;
+    }
+
+    input[type=range]::-ms-fill-upper {
+        background: #74A9D8;
+        border: 0px solid #010101;
+        border-radius: 2px;
+        box-shadow: 1px 1px 1px #000000;
+    }
+
+    input[type=range]::-ms-thumb {
+        margin-top: 1px;
+        box-shadow: 1px 1px 1px #000031;
+        border: 1px solid #00001E;
+        height: 26px;
+        width: 26px;
+        border-radius: 15px;
+        background: #FFFFFF;
+        cursor: pointer;
+    }
+
+    input[type=range]:focus::-ms-fill-lower {
+        background: #74A9D8;
+    }
+
+    input[type=range]:focus::-ms-fill-upper {
+        background: #74A9D8;
     }
