--- a/BlankCordovaApp1/BlankCordovaApp1/www/css/index.css
+++ b/BlankCordovaApp1/BlankCordovaApp1/www/css/index.css
@@ -14,18 +14,69 @@
 
 
 
-body {
+html, body {
+    
+}
+
+#main {
+    
     
 }
 
 
 
-#frontPage {
+#signupPage {
+    position: absolute;
+    height: 100vh;
+    width: 100vw;    
+    background-image: url(../images/bg-front.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;   
+    /*background-color: black;*/
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+#signupPage-content {
     position: fixed;
     top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
+}
+
+#frontPage {
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
+    background-image: url(../images/bg-front.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    /*background-color: black;*/
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+#frontPage-content {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+#btnSignUp {
+    background-color: #EE524F !important;
+}
+
+#btnPlay {
+    background-color: #EE524F !important;
 }
 
 #splashPage {
@@ -34,15 +85,16 @@ body {
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    
 }
 
 #front-page {
+    height: 100%;
+    width: 100%;
+    margin: 0;
     text-align: center;
     background-color: white;
     color: white;
     font-family: replayRounded;
-    height: 100%;
 }
 
 #MoodSurveyPage {
