--- a/BlankCordovaApp1/BlankCordovaApp1/www/css/index.css
+++ b/BlankCordovaApp1/BlankCordovaApp1/www/css/index.css
@@ -94,9 +94,20 @@ html, body {
     transform: translate(-50%, -50%);
 }
 
+#quizPage-content {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+
+
+
 #panelGrey {
     background: #36464e;
-    max-width: 300px;
+    min-width: 300px;
     height: auto;
     margin: 15px;
     padding: 10px;
@@ -105,8 +116,24 @@ html, body {
     border-radius: 10px;
 }
 
-#userName 
-{
+#quizPage {
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
+    background-image: url(../images/bg-front.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    /*background-color: black;*/
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+
+
+#userName {
     background-color: white !important;
     font-size: 16px !important;
     color: black !important;
@@ -194,11 +221,10 @@ html, body {
 
 
 
-.questHeading 
-{
+.questHeading {
     border-radius: 5px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    background: #444444;
+    background: #EE524F;
     padding: 3px;
     color: #ffffff;
     font-weight: 700;
