--- a/BlankCordovaApp1/BlankCordovaApp1/www/css/index.css
+++ b/BlankCordovaApp1/BlankCordovaApp1/www/css/index.css
@@ -15,7 +15,9 @@
 
 
 html, body {
-    
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
 }
 
 #main {
@@ -26,18 +28,7 @@ html, body {
 
 
 #signupPage {
-    position: absolute;
-    height: 100vh;
-    width: 100vw;    
-    background-image: url(../images/bg-front.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;   
-    /*background-color: black;*/
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+    
 }
 
 #signupPage-content {
@@ -49,18 +40,7 @@ html, body {
 }
 
 #frontPage {
-    position: absolute;
-    height: 100vh;
-    width: 100vw;
-    background-image: url(../images/bg-front.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    /*background-color: black;*/
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+    
 }
 
 #frontPage-content {
@@ -72,18 +52,7 @@ html, body {
 }
 
 #accountSignUpPage {
-    position: absolute;
-    height: 100vh;
-    width: 100vw;
-    background-image: url(../images/bg-front.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    /*background-color: black;*/
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+    
 }
 
 #accountSignUpPage-content {
@@ -102,10 +71,18 @@ html, body {
     transform: translate(-50%, -50%);
 }
 
+#quizPageExam-content {
+    
+}
 
+.ui-content
+{
+    padding: 0px !important;
+}
 
 
 #panelGrey {
+    
     background: #36464e;
     min-width: 300px;
     height: auto;
@@ -116,19 +93,14 @@ html, body {
     border-radius: 10px;
 }
 
+#main {
+    
+}
+
 #quizPage {
-    position: absolute;
-    height: 100vh;
-    width: 100vw;
-    background-image: url(../images/bg-front.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    /*background-color: black;*/
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+    
+
+    
 }
 
 
@@ -186,6 +158,14 @@ html, body {
 }
 
 #splashPage {
+    position: absolute;
+    background-color: white;
+    height: 100%;
+    width: 100%;
+   
+}
+
+#splashImg {
     position: fixed;
     top: 50%;
     left: 50%;
@@ -193,12 +173,10 @@ html, body {
     transform: translate(-50%, -50%);
 }
 
+
 #front-page {
-    height: 100%;
-    width: 100%;
-    margin: 0;
     text-align: center;
-    background-color: white;
+    background-image: url(../images/bg-front.png);
     color: white;
     font-family: replayRounded;
 }
