--- a/BlankCordovaApp1/BlankCordovaApp1/www/css/index.css
+++ b/BlankCordovaApp1/BlankCordovaApp1/www/css/index.css
@@ -145,6 +145,10 @@ html, body {
     background-color: #EE524F !important;
 }
 
+#btnLoad {
+    background-color: #EE524F !important;
+}
+
 #btnMoodSurvey {
     background-color: #EE524F !important;
 }
