--- a/BlankCordovaApp1/BlankCordovaApp1/www/css/index.css
+++ b/BlankCordovaApp1/BlankCordovaApp1/www/css/index.css
@@ -7,7 +7,7 @@
 
 @font-face {
 
-    font-family: "replayRounded";
+    font-family: "replayRounded-bold";
     src: url("../fonts/BPREPLAYBOLD.OTF");
     font-weight: bold;
 }
@@ -25,10 +25,35 @@ html, body {
     
 }
 
+#scrHeading {
+    font-size: 16px;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    background: #EE524F;
+    padding: 3px;
+}
+
+#ansText 
+{
+
+}
+
+#scrText 
+{
+
+}
+
+#totScrText {
+    font-size: 20px;
+    color: black;
+    background-color: white;
+    font-family: replayRounded-bold;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 
 
 #signupPage {
-    
 }
 
 #signupPage-content {
